syntax = "proto3";
package me.chacham.dongbaek;
option java_package = "me.chacham.dongbaek.infra.proto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message PbSchedule {
  string id = 1;
  string title = 2;
  google.protobuf.Timestamp start_date = 3;
  optional google.protobuf.Timestamp due_date = 4;
  optional google.protobuf.Timestamp finish_date = 5;
  PbGoal goal = 6;
  PbRepeatInfo repeat_info = 7;
}

message PbGoal {
  oneof value {
    int32 quantity_goal = 1;
    google.protobuf.Duration duration_goal = 2;
  }
}

message PbRepeatInfo {
  oneof value {
    PbUnrepeated unrepeated = 1;
    PbPeriodic periodic_repeat = 2;
  }
}

message PbUnrepeated {}

message PbPeriodic {
  int32 period_days = 1;
  int32 offset_days = 2;
}

message PbProgress {
  string schedule_id = 1;
  google.protobuf.Timestamp start_date = 2;
  optional google.protobuf.Timestamp end_date = 3;
  oneof progress_status {
    PbQuantityProgress quantity_progress = 11;
    PbDurationProgress duration_progress = 12;
  }
}

message PbQuantityProgress {
  int32 value = 1;
}

message PbDurationProgress {
  google.protobuf.Duration value = 1;
  optional google.protobuf.Timestamp ongoing_start_time = 2;
}
